--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.ofa.offline3fauth.MainActivity"
+            android:configChanges="orientation|keyboardHidden" 
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
